exports[`no-unnecessary-parameters > invalid(1): function format(value) { return value; } format(1); format(1); 1`] = `

  1 | function format(value) { return value; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(1): function format(value) { return value; } format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { return value; } format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 1; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(1): function format(value: number) { return value; } format(1); format(1); 1`] = `

  1 | function format(value: number) { return value; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(1): function format(value: number) { return value; } format(1); format(1); 2`] = `

Message:
> 1 | function format(value: number) { return value; } format(1); format(1);
    |                 ^^^^^^^^^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(10): function format(value) { return value; } format(-1); format(-0x1); 1`] = `

  1 | function format(value) { return value; } format(-1); format(-0x1);

`;

exports[`no-unnecessary-parameters > invalid(10): function format(value) { return value; } format(-1); format(-0x1); 2`] = `

Message:
> 1 | function format(value) { return value; } format(-1); format(-0x1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return (-1); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(10): function format(value) { return value; } type Signature = typeof format; format(1); format(1); 1`] = `

  1 | function format(value) { return value; } type Signature = typeof format; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(10): function format(value) { return value; } type Signature = typeof format; format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { return value; } type Signature = typeof format; format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(11): function format(value) { <string>value; return value; } format(\"use strict\"); format(\"use strict\"); 1`] = `

  1 | function format(value) { <string>value; return value; } format("use strict"); format("use strict");

`;

exports[`no-unnecessary-parameters > invalid(11): function format(value) { <string>value; return value; } format(\"use strict\"); format(\"use strict\"); 2`] = `

Message:
> 1 | function format(value) { <string>value; return value; } format("use strict"); format("use strict");
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(11): function format(value) { return value; } format(+1); format(1); 1`] = `

  1 | function format(value) { return value; } format(+1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(11): function format(value) { return value; } format(+1); format(1); 2`] = `

Message:
> 1 | function format(value) { return value; } format(+1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return (+1); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(12): function format(value) { return value; } format(-0); format(-0); 1`] = `

  1 | function format(value) { return value; } format(-0); format(-0);

`;

exports[`no-unnecessary-parameters > invalid(12): function format(value) { return value; } format(-0); format(-0); 2`] = `

Message:
> 1 | function format(value) { return value; } format(-0); format(-0);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return (-0); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(12): function outer() { function format(value) { return delete (<number>value); } format(1); format(1); } outer(); 1`] = `

  1 | function outer() { function format(value) { return delete (<number>value); } format(1); format(1); } outer();

`;

exports[`no-unnecessary-parameters > invalid(12): function outer() { function format(value) { return delete (<number>value); } format(1); format(1); } outer(); 2`] = `

Message:
> 1 | function outer() { function format(value) { return delete (<number>value); } format(1); format(1); } outer();
    |                                    ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(13): function format(value) { return value; } format(1n); format(0x1n); 1`] = `

  1 | function format(value) { return value; } format(1n); format(0x1n);

`;

exports[`no-unnecessary-parameters > invalid(13): function format(value) { return value; } format(1n); format(0x1n); 2`] = `

Message:
> 1 | function format(value) { return value; } format(1n); format(0x1n);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 1n; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(13): function format(value) { return value; } type Length = typeof format.length; format(1); format(1); 1`] = `

  1 | function format(value) { return value; } type Length = typeof format.length; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(13): function format(value) { return value; } type Length = typeof format.length; format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { return value; } type Length = typeof format.length; format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(14): function format(value) { return value; } format(-1n); format(-1n); 1`] = `

  1 | function format(value) { return value; } format(-1n); format(-1n);

`;

exports[`no-unnecessary-parameters > invalid(14): function format(value) { return value; } format(-1n); format(-1n); 2`] = `

Message:
> 1 | function format(value) { return value; } format(-1n); format(-1n);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return (-1n); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(15): function format(value) { return value; } format(true); format(true); 1`] = `

  1 | function format(value) { return value; } format(true); format(true);

`;

exports[`no-unnecessary-parameters > invalid(15): function format(value) { return value; } format(true); format(true); 2`] = `

Message:
> 1 | function format(value) { return value; } format(true); format(true);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return true; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(16): function format(value) { return value; } format(false); format(false); 1`] = `

  1 | function format(value) { return value; } format(false); format(false);

`;

exports[`no-unnecessary-parameters > invalid(16): function format(value) { return value; } format(false); format(false); 2`] = `

Message:
> 1 | function format(value) { return value; } format(false); format(false);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return false; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(17): function format(value) { return value; } format(null); format(null); 1`] = `

  1 | function format(value) { return value; } format(null); format(null);

`;

exports[`no-unnecessary-parameters > invalid(17): function format(value) { return value; } format(null); format(null); 2`] = `

Message:
> 1 | function format(value) { return value; } format(null); format(null);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return null; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(18): function format(value) { return value; } format(\`text\`); format(\"text\"); 1`] = `

  1 | function format(value) { return value; } format(\`text\`); format("text");

`;

exports[`no-unnecessary-parameters > invalid(18): function format(value) { return value; } format(\`text\`); format(\"text\"); 2`] = `

Message:
> 1 | function format(value) { return value; } format(\`text\`); format("text");
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return \`text\`; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(19): function format(value) { return value; } format(); format(); 1`] = `

  1 | function format(value) { return value; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(19): function format(value) { return value; } format(); format(); 2`] = `

Message:
> 1 | function format(value) { return value; } format(); format();
    |                 ^^^^^ Parameter \`value\` is always \`undefined\`.

Output:
  1 | function format() { return (void 0); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(2): const format = value => value; format(1); format(1); 1`] = `

  1 | const format = value => value; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(2): const format = value => value; format(1); format(1); 2`] = `

Message:
> 1 | const format = value => value; format(1); format(1);
    |                ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const format = () => 1; format(); format();

`;

exports[`no-unnecessary-parameters > invalid(2): const format: (value: number) => number = value => value; format(1); format(1); 1`] = `

  1 | const format: (value: number) => number = value => value; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(2): const format: (value: number) => number = value => value; format(1); format(1); 2`] = `

Message:
> 1 | const format: (value: number) => number = value => value; format(1); format(1);
    |                                           ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(20): function format(value) { return value; } format(); format(undefined); 1`] = `

  1 | function format(value) { return value; } format(); format(undefined);

`;

exports[`no-unnecessary-parameters > invalid(20): function format(value) { return value; } format(); format(undefined); 2`] = `

Message:
> 1 | function format(value) { return value; } format(); format(undefined);
    |                 ^^^^^ Parameter \`value\` is always \`undefined\`.

Output:
  1 | function format() { return (void 0); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(21): function format(value) { return value; } format(void 0); format(undefined); 1`] = `

  1 | function format(value) { return value; } format(void 0); format(undefined);

`;

exports[`no-unnecessary-parameters > invalid(21): function format(value) { return value; } format(void 0); format(undefined); 2`] = `

Message:
> 1 | function format(value) { return value; } format(void 0); format(undefined);
    |                 ^^^^^ Parameter \`value\` is always \`undefined\`.

Output:
  1 | function format() { return (void 0); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(22): function format(value = false) { return value; } format(); format(false); format(undefined); 1`] = `

  1 | function format(value = false) { return value; } format(); format(false); format(undefined);

`;

exports[`no-unnecessary-parameters > invalid(22): function format(value = false) { return value; } format(); format(false); format(undefined); 2`] = `

Message:
> 1 | function format(value = false) { return value; } format(); format(false); format(undefined);
    |                 ^^^^^ Parameter \`value\` always receives its default value.

Output:
  1 | function format() { return false; } format(); format(); format();

`;

exports[`no-unnecessary-parameters > invalid(23): function format(value = 1) { return value; } format(2); format(2); 1`] = `

  1 | function format(value = 1) { return value; } format(2); format(2);

`;

exports[`no-unnecessary-parameters > invalid(23): function format(value = 1) { return value; } format(2); format(2); 2`] = `

Message:
> 1 | function format(value = 1) { return value; } format(2); format(2);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 2; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(24): function format(first, second = first, third = second) { return [first, second, third]; } format(1); format(2); 1`] = `

  1 | function format(first, second = first, third = second) { return [first, second, third]; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(24): function format(first, second = first, third = second) { return [first, second, third]; } format(1); format(2); 2`] = `

Message:
> 1 | function format(first, second = first, third = second) { return [first, second, third]; } format(1); format(2);
    |                        ^^^^^^ Parameter \`second\` always receives its default value.

`;

exports[`no-unnecessary-parameters > invalid(24): function format(first, second = first, third = second) { return [first, second, third]; } format(1); format(2); 3`] = `

Message:
> 1 | function format(first, second = first, third = second) { return [first, second, third]; } format(1); format(2);
    |                                        ^^^^^ Parameter \`third\` always receives its default value.

Output:
  1 | function format(first, second = first) {
  2 | 	const third = second;
  3 | 	 return [first, second, third]; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(25): function format(value = create()) { return value; } format(); format(undefined); 1`] = `

  1 | function format(value = create()) { return value; } format(); format(undefined);

`;

exports[`no-unnecessary-parameters > invalid(25): function format(value = create()) { return value; } format(); format(undefined); 2`] = `

Message:
> 1 | function format(value = create()) { return value; } format(); format(undefined);
    |                 ^^^^^ Parameter \`value\` always receives its default value.

`;

exports[`no-unnecessary-parameters > invalid(26): function format(value = {}) { return value; } format(); format(); 1`] = `

  1 | function format(value = {}) { return value; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(26): function format(value = {}) { return value; } format(); format(); 2`] = `

Message:
> 1 | function format(value = {}) { return value; } format(); format();
    |                 ^^^^^ Parameter \`value\` always receives its default value.

`;

exports[`no-unnecessary-parameters > invalid(27): function format(first, second = first) { return first + second; } format(1); format(2); 1`] = `

  1 | function format(first, second = first) { return first + second; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(27): function format(first, second = first) { return first + second; } format(1); format(2); 2`] = `

Message:
> 1 | function format(first, second = first) { return first + second; } format(1); format(2);
    |                        ^^^^^^ Parameter \`second\` always receives its default value.

Output:
  1 | function format(first) {
  2 | 	const second = first;
  3 | 	 return first + second; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(28): function format(first, second = first) { second++; return first + second; } format(1); format(2); 1`] = `

  1 | function format(first, second = first) { second++; return first + second; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(28): function format(first, second = first) { second++; return first + second; } format(1); format(2); 2`] = `

Message:
> 1 | function format(first, second = first) { second++; return first + second; } format(1); format(2);
    |                        ^^^^^^ Parameter \`second\` always receives its default value.

Output:
  1 | function format(first) {
  2 | 	let second = first;
  3 | 	 second++; return first + second; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(29): const format = (first, second = first) => first + second; format(1); format(2); 1`] = `

  1 | const format = (first, second = first) => first + second; format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(29): const format = (first, second = first) => first + second; format(1); format(2); 2`] = `

Message:
> 1 | const format = (first, second = first) => first + second; format(1); format(2);
    |                        ^^^^^^ Parameter \`second\` always receives its default value.

Output:
  1 | const format = (first) => {
  2 | 	const second = first;
  3 | 	return first + second;
  4 | }; format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(3): const format = value => value; eval?.(source); format(1); format(1); 1`] = `

  1 | const format = value => value; eval?.(source); format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(3): const format = value => value; eval?.(source); format(1); format(1); 2`] = `

Message:
> 1 | const format = value => value; eval?.(source); format(1); format(1);
    |                ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const format = () => 1; eval?.(source); format(); format();

`;

exports[`no-unnecessary-parameters > invalid(3): function format<T>(value: T) { return value; } format<number>(1); format<number>(1); 1`] = `

  1 | function format<T>(value: T) { return value; } format<number>(1); format<number>(1);

`;

exports[`no-unnecessary-parameters > invalid(3): function format<T>(value: T) { return value; } format<number>(1); format<number>(1); 2`] = `

Message:
> 1 | function format<T>(value: T) { return value; } format<number>(1); format<number>(1);
    |                    ^^^^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(30): async function format(first, second = first) { return first + second; } format(1); format(2); 1`] = `

  1 | async function format(first, second = first) { return first + second; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(30): async function format(first, second = first) { return first + second; } format(1); format(2); 2`] = `

Message:
> 1 | async function format(first, second = first) { return first + second; } format(1); format(2);
    |                              ^^^^^^ Parameter \`second\` always receives its default value.

`;

exports[`no-unnecessary-parameters > invalid(31): function * format(first, second = first) { yield first + second; } format(1); format(2); 1`] = `

  1 | function * format(first, second = first) { yield first + second; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(31): function * format(first, second = first) { yield first + second; } format(1); format(2); 2`] = `

Message:
> 1 | function * format(first, second = first) { yield first + second; } format(1); format(2);
    |                          ^^^^^^ Parameter \`second\` always receives its default value.

`;

exports[`no-unnecessary-parameters > invalid(32): function format(value) { value++; return value; } format(1); format(1); 1`] = `

  1 | function format(value) { value++; return value; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(32): function format(value) { value++; return value; } format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { value++; return value; } format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(33): const limit = 10; function format(value) { return value; } format(limit); format(limit); 1`] = `

  1 | const limit = 10; function format(value) { return value; } format(limit); format(limit);

`;

exports[`no-unnecessary-parameters > invalid(33): const limit = 10; function format(value) { return value; } format(limit); format(limit); 2`] = `

Message:
> 1 | const limit = 10; function format(value) { return value; } format(limit); format(limit);
    |                                   ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const limit = 10; function format() { return limit; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(34): const options = {}; function format(value) { return value; } format(options); format(options); 1`] = `

  1 | const options = {}; function format(value) { return value; } format(options); format(options);

`;

exports[`no-unnecessary-parameters > invalid(34): const options = {}; function format(value) { return value; } format(options); format(options); 2`] = `

Message:
> 1 | const options = {}; function format(value) { return value; } format(options); format(options);
    |                                     ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const options = {}; function format() { return options; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(35): let limit = 10; function format(value) { return value; } format(limit); format(limit); 1`] = `

  1 | let limit = 10; function format(value) { return value; } format(limit); format(limit);

`;

exports[`no-unnecessary-parameters > invalid(35): let limit = 10; function format(value) { return value; } format(limit); format(limit); 2`] = `

Message:
> 1 | let limit = 10; function format(value) { return value; } format(limit); format(limit);
    |                                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | let limit = 10; function format() { return limit; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(36): const value = 1; function format(value) { return value; } format(value); format(value); 1`] = `

  1 | const value = 1; function format(value) { return value; } format(value); format(value);

`;

exports[`no-unnecessary-parameters > invalid(36): const value = 1; function format(value) { return value; } format(value); format(value); 2`] = `

Message:
> 1 | const value = 1; function format(value) { return value; } format(value); format(value);
    |                                  ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const value = 1; function format() { return value; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(37): function outer(limit) { function format(value) { return value; } format(limit); format(limit); } 1`] = `

  1 | function outer(limit) { function format(value) { return value; } format(limit); format(limit); }

`;

exports[`no-unnecessary-parameters > invalid(37): function outer(limit) { function format(value) { return value; } format(limit); format(limit); } 2`] = `

Message:
> 1 | function outer(limit) { function format(value) { return value; } format(limit); format(limit); }
    |                                         ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(38): function format(root) { return root; } format(document); format(document); 1`] = `

  1 | function format(root) { return root; } format(document); format(document);

`;

exports[`no-unnecessary-parameters > invalid(38): function format(root) { return root; } format(document); format(document); 2`] = `

Message:
> 1 | function format(root) { return root; } format(document); format(document);
    |                 ^^^^ Parameter \`root\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(39): function format(value) { return value; } format?.(1); format?.(1); 1`] = `

  1 | function format(value) { return value; } format?.(1); format?.(1);

`;

exports[`no-unnecessary-parameters > invalid(39): function format(value) { return value; } format?.(1); format?.(1); 2`] = `

Message:
> 1 | function format(value) { return value; } format?.(1); format?.(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 1; } format?.(); format?.();

`;

exports[`no-unnecessary-parameters > invalid(4): const format = (value) => value; format(1); format(1); 1`] = `

  1 | const format = (value) => value; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(4): const format = (value) => value; format(1); format(1); 2`] = `

Message:
> 1 | const format = (value) => value; format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const format = () => 1; format(); format();

`;

exports[`no-unnecessary-parameters > invalid(4): function format(value: number) { return value; } format(1 as number); format(1 satisfies number); 1`] = `

  1 | function format(value: number) { return value; } format(1 as number); format(1 satisfies number);

`;

exports[`no-unnecessary-parameters > invalid(4): function format(value: number) { return value; } format(1 as number); format(1 satisfies number); 2`] = `

Message:
> 1 | function format(value: number) { return value; } format(1 as number); format(1 satisfies number);
    |                 ^^^^^^^^^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(40): function format(value) { return value; } (format)(1); ((format))(1); 1`] = `

  1 | function format(value) { return value; } (format)(1); ((format))(1);

`;

exports[`no-unnecessary-parameters > invalid(40): function format(value) { return value; } (format)(1); ((format))(1); 2`] = `

Message:
> 1 | function format(value) { return value; } (format)(1); ((format))(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 1; } (format)(); ((format))();

`;

exports[`no-unnecessary-parameters > invalid(41): function format(value) { return () => value; } format(1); format(1); 1`] = `

  1 | function format(value) { return () => value; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(41): function format(value) { return () => value; } format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { return () => value; } format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return () => 1; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(42): function format(value) { return {value}; } format(1); format(1); 1`] = `

  1 | function format(value) { return {value}; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(42): function format(value) { return {value}; } format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { return {value}; } format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return {value: 1}; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(43): function format(value) { return value.toString(); } format(1); format(1); 1`] = `

  1 | function format(value) { return value.toString(); } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(43): function format(value) { return value.toString(); } format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { return value.toString(); } format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return (1).toString(); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(44): function format(value) { return -value; } format(-1); format(-1); 1`] = `

  1 | function format(value) { return -value; } format(-1); format(-1);

`;

exports[`no-unnecessary-parameters > invalid(44): function format(value) { return -value; } format(-1); format(-1); 2`] = `

Message:
> 1 | function format(value) { return -value; } format(-1); format(-1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return -(-1); } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(45): const format = value => <span>{value}</span>; format(1); format(1); 1`] = `

  1 | const format = value => <span>{value}</span>; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(45): const format = value => <span>{value}</span>; format(1); format(1); 2`] = `

Message:
> 1 | const format = value => <span>{value}</span>; format(1); format(1);
    |                ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const format = () => <span>{1}</span>; format(); format();

`;

exports[`no-unnecessary-parameters > invalid(46): function render(First, Component = First) { return <Component />; } render(FirstComponent); render(SecondComponent); 1`] = `

  1 | function render(First, Component = First) { return <Component />; } render(FirstComponent); render(SecondComponent);

`;

exports[`no-unnecessary-parameters > invalid(46): function render(First, Component = First) { return <Component />; } render(FirstComponent); render(SecondComponent); 2`] = `

Message:
> 1 | function render(First, Component = First) { return <Component />; } render(FirstComponent); render(SecondComponent);
    |                        ^^^^^^^^^ Parameter \`Component\` always receives its default value.

Output:
  1 | function render(First) {
  2 | 	const Component = First;
  3 | 	 return <Component />; } render(FirstComponent); render(SecondComponent);

`;

exports[`no-unnecessary-parameters > invalid(47): function format(value) { function other() { return arguments[0]; } return value; } format(1); format(1); 1`] = `

  1 | function format(value) { function other() { return arguments[0]; } return value; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(47): function format(value) { function other() { return arguments[0]; } return value; } format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { function other() { return arguments[0]; } return value; } format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { function other() { return arguments[0]; } return 1; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(48): class Point { constructor(x, y, z) { this.point = [x, y, z]; } } new Point(1, 2, 0); new Point(3, 4, 0); 1`] = `

  1 | class Point { constructor(x, y, z) { this.point = [x, y, z]; } } new Point(1, 2, 0); new Point(3, 4, 0);

`;

exports[`no-unnecessary-parameters > invalid(48): class Point { constructor(x, y, z) { this.point = [x, y, z]; } } new Point(1, 2, 0); new Point(3, 4, 0); 2`] = `

Message:
> 1 | class Point { constructor(x, y, z) { this.point = [x, y, z]; } } new Point(1, 2, 0); new Point(3, 4, 0);
    |                                 ^ Parameter \`z\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(49): function Point(x, y, z) { this.point = [x, y, z]; } new Point(1, 2, 0); new Point(3, 4, 0); 1`] = `

  1 | function Point(x, y, z) { this.point = [x, y, z]; } new Point(1, 2, 0); new Point(3, 4, 0);

`;

exports[`no-unnecessary-parameters > invalid(49): function Point(x, y, z) { this.point = [x, y, z]; } new Point(1, 2, 0); new Point(3, 4, 0); 2`] = `

Message:
> 1 | function Point(x, y, z) { this.point = [x, y, z]; } new Point(1, 2, 0); new Point(3, 4, 0);
    |                      ^ Parameter \`z\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(5): const format = function (value) { return value; }; format(1); format(1); 1`] = `

  1 | const format = function (value) { return value; }; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(5): const format = function (value) { return value; }; format(1); format(1); 2`] = `

Message:
> 1 | const format = function (value) { return value; }; format(1); format(1);
    |                          ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const format = function () { return 1; }; format(); format();

`;

exports[`no-unnecessary-parameters > invalid(5): const limit = 1; function format(value: number) { return value; } format(limit!); format(limit as number); 1`] = `

  1 | const limit = 1; function format(value: number) { return value; } format(limit!); format(limit as number);

`;

exports[`no-unnecessary-parameters > invalid(5): const limit = 1; function format(value: number) { return value; } format(limit!); format(limit as number); 2`] = `

Message:
> 1 | const limit = 1; function format(value: number) { return value; } format(limit!); format(limit as number);
    |                                  ^^^^^^^^^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(50): const Point = class { constructor(value) { this.value = value; } }; new Point(1); new Point(1); 1`] = `

  1 | const Point = class { constructor(value) { this.value = value; } }; new Point(1); new Point(1);

`;

exports[`no-unnecessary-parameters > invalid(50): const Point = class { constructor(value) { this.value = value; } }; new Point(1); new Point(1); 2`] = `

Message:
> 1 | const Point = class { constructor(value) { this.value = value; } }; new Point(1); new Point(1);
    |                                   ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(51): class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 1`] = `

  1 | class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, "px"); this.#format(2, "px"); } }

`;

exports[`no-unnecessary-parameters > invalid(51): class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 2`] = `

Message:
> 1 | class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, "px"); this.#format(2, "px"); } }
    |                                  ^^^^ Parameter \`unit\` receives the same value at every call.

Output:
  1 | class Formatter { #format(value) { return value + "px"; } run() { this.#format(1); this.#format(2); } }

`;

exports[`no-unnecessary-parameters > invalid(52): export class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 1`] = `

  1 | export class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, "px"); this.#format(2, "px"); } }

`;

exports[`no-unnecessary-parameters > invalid(52): export class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 2`] = `

Message:
> 1 | export class Formatter { #format(value, unit) { return value + unit; } run() { this.#format(1, "px"); this.#format(2, "px"); } }
    |                                         ^^^^ Parameter \`unit\` receives the same value at every call.

Output:
  1 | export class Formatter { #format(value) { return value + "px"; } run() { this.#format(1); this.#format(2); } }

`;

exports[`no-unnecessary-parameters > invalid(53): class Formatter { static #format(value, unit) { return value + unit; } static run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 1`] = `

  1 | class Formatter { static #format(value, unit) { return value + unit; } static run() { this.#format(1, "px"); this.#format(2, "px"); } }

`;

exports[`no-unnecessary-parameters > invalid(53): class Formatter { static #format(value, unit) { return value + unit; } static run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 2`] = `

Message:
> 1 | class Formatter { static #format(value, unit) { return value + unit; } static run() { this.#format(1, "px"); this.#format(2, "px"); } }
    |                                         ^^^^ Parameter \`unit\` receives the same value at every call.

Output:
  1 | class Formatter { static #format(value) { return value + "px"; } static run() { this.#format(1); this.#format(2); } }

`;

exports[`no-unnecessary-parameters > invalid(54): class Formatter { #format(value) { return value; } run(other) { other.#format(1); other.#format(1); } } 1`] = `

  1 | class Formatter { #format(value) { return value; } run(other) { other.#format(1); other.#format(1); } }

`;

exports[`no-unnecessary-parameters > invalid(54): class Formatter { #format(value) { return value; } run(other) { other.#format(1); other.#format(1); } } 2`] = `

Message:
> 1 | class Formatter { #format(value) { return value; } run(other) { other.#format(1); other.#format(1); } }
    |                           ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | class Formatter { #format() { return 1; } run(other) { other.#format(); other.#format(); } }

`;

exports[`no-unnecessary-parameters > invalid(55): class Formatter { #format(value) { return value; } run() { return class Other { run(formatter) { formatter.#format(1); formatter.#format(1); } }; } } 1`] = `

  1 | class Formatter { #format(value) { return value; } run() { return class Other { run(formatter) { formatter.#format(1); formatter.#format(1); } }; } }

`;

exports[`no-unnecessary-parameters > invalid(55): class Formatter { #format(value) { return value; } run() { return class Other { run(formatter) { formatter.#format(1); formatter.#format(1); } }; } } 2`] = `

Message:
> 1 | class Formatter { #format(value) { return value; } run() { return class Other { run(formatter) { formatter.#format(1); formatter.#format(1); } }; } }
    |                           ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | class Formatter { #format() { return 1; } run() { return class Other { run(formatter) { formatter.#format(); formatter.#format(); } }; } }

`;

exports[`no-unnecessary-parameters > invalid(56): class Formatter {\n\t#format(value) { return value; }\n\trun() {\n\t\tthis.#format(1);\n\t\tthis.#format(1);\n\t\treturn class Other {\n\t\t\t#format(value) { return value; }\n\t\t\trun() { this.#format(2); this.#format(3); }\n\t\t};\n\t}\n} 1`] = `

   1 | class Formatter {
   2 | 	#format(value) { return value; }
   3 | 	run() {
   4 | 		this.#format(1);
   5 | 		this.#format(1);
   6 | 		return class Other {
   7 | 			#format(value) { return value; }
   8 | 			run() { this.#format(2); this.#format(3); }
   9 | 		};
  10 | 	}
  11 | }

`;

exports[`no-unnecessary-parameters > invalid(56): class Formatter {\n\t#format(value) { return value; }\n\trun() {\n\t\tthis.#format(1);\n\t\tthis.#format(1);\n\t\treturn class Other {\n\t\t\t#format(value) { return value; }\n\t\t\trun() { this.#format(2); this.#format(3); }\n\t\t};\n\t}\n} 2`] = `

Message:
   1 | class Formatter {
>  2 | 	#format(value) { return value; }
     | 	        ^^^^^ Parameter \`value\` receives the same value at every call.
   3 | 	run() {
   4 | 		this.#format(1);
   5 | 		this.#format(1);
   6 | 		return class Other {
   7 | 			#format(value) { return value; }
   8 | 			run() { this.#format(2); this.#format(3); }
   9 | 		};
  10 | 	}
  11 | }

Output:
   1 | class Formatter {
   2 | 	#format() { return 1; }
   3 | 	run() {
   4 | 		this.#format();
   5 | 		this.#format();
   6 | 		return class Other {
   7 | 			#format(value) { return value; }
   8 | 			run() { this.#format(2); this.#format(3); }
   9 | 		};
  10 | 	}
  11 | }

`;

exports[`no-unnecessary-parameters > invalid(57): function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print); 1`] = `

  1 | function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print);

`;

exports[`no-unnecessary-parameters > invalid(57): function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print); 2`] = `

Message:
> 1 | function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print);
    |                      ^^^^^^^^ Parameter \`callback\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(58): const walk = function inner(value, callback) { return value ? inner(value.next, callback) : callback(value); }; walk(first, print); walk(second, print); 1`] = `

  1 | const walk = function inner(value, callback) { return value ? inner(value.next, callback) : callback(value); }; walk(first, print); walk(second, print);

`;

exports[`no-unnecessary-parameters > invalid(58): const walk = function inner(value, callback) { return value ? inner(value.next, callback) : callback(value); }; walk(first, print); walk(second, print); 2`] = `

Message:
> 1 | const walk = function inner(value, callback) { return value ? inner(value.next, callback) : callback(value); }; walk(first, print); walk(second, print);
    |                                    ^^^^^^^^ Parameter \`callback\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(59): function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print); function print(value) { return value; } 1`] = `

  1 | function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print); function print(value) { return value; }

`;

exports[`no-unnecessary-parameters > invalid(59): function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print); function print(value) { return value; } 2`] = `

Message:
> 1 | function walk(value, callback) { return value ? walk(value.next, callback) : callback(value); } walk(first, print); walk(second, print); function print(value) { return value; }
    |                      ^^^^^^^^ Parameter \`callback\` receives the same value at every call.

Output:
  1 | function walk(value) { return value ? walk(value.next) : print(value); } walk(first); walk(second); function print(value) { return value; }

`;

exports[`no-unnecessary-parameters > invalid(6): const format = function inner(value) { return value; }; format(1); format(1); 1`] = `

  1 | const format = function inner(value) { return value; }; format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(6): const format = function inner(value) { return value; }; format(1); format(1); 2`] = `

Message:
> 1 | const format = function inner(value) { return value; }; format(1); format(1);
    |                               ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const format = function inner() { return 1; }; format(); format();

`;

exports[`no-unnecessary-parameters > invalid(6): function format(this: void, value: number) { return value; } format(1); format(1); 1`] = `

  1 | function format(this: void, value: number) { return value; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(6): function format(this: void, value: number) { return value; } format(1); format(1); 2`] = `

Message:
> 1 | function format(this: void, value: number) { return value; } format(1); format(1);
    |                             ^^^^^^^^^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(60): function walk(value, unit) { return value ? walk(value.next, \"px\") : unit; } walk(first, \"px\"); walk(second, \"px\"); 1`] = `

  1 | function walk(value, unit) { return value ? walk(value.next, "px") : unit; } walk(first, "px"); walk(second, "px");

`;

exports[`no-unnecessary-parameters > invalid(60): function walk(value, unit) { return value ? walk(value.next, \"px\") : unit; } walk(first, \"px\"); walk(second, \"px\"); 2`] = `

Message:
> 1 | function walk(value, unit) { return value ? walk(value.next, "px") : unit; } walk(first, "px"); walk(second, "px");
    |                      ^^^^ Parameter \`unit\` receives the same value at every call.

Output:
  1 | function walk(value) { return value ? walk(value.next) : "px"; } walk(first); walk(second);

`;

exports[`no-unnecessary-parameters > invalid(61): function format({path, verbose, dryRun = false}) { return [path, verbose, dryRun]; } format({path: \"a\", verbose: true}); format({path: \"b\", verbose: true, dryRun: false}); 1`] = `

  1 | function format({path, verbose, dryRun = false}) { return [path, verbose, dryRun]; } format({path: "a", verbose: true}); format({path: "b", verbose: true, dryRun: false});

`;

exports[`no-unnecessary-parameters > invalid(61): function format({path, verbose, dryRun = false}) { return [path, verbose, dryRun]; } format({path: \"a\", verbose: true}); format({path: \"b\", verbose: true, dryRun: false}); 2`] = `

Message:
> 1 | function format({path, verbose, dryRun = false}) { return [path, verbose, dryRun]; } format({path: "a", verbose: true}); format({path: "b", verbose: true, dryRun: false});
    |                        ^^^^^^^ Parameter \`verbose\` receives the same value at every call.

Output:
  1 | function format({path,  dryRun = false}) { return [path, true, dryRun]; } format({path: "a"  }); format({path: "b",   dryRun: false});

`;

exports[`no-unnecessary-parameters > invalid(61): function format({path, verbose, dryRun = false}) { return [path, verbose, dryRun]; } format({path: \"a\", verbose: true}); format({path: \"b\", verbose: true, dryRun: false}); 3`] = `

Message:
> 1 | function format({path, verbose, dryRun = false}) { return [path, verbose, dryRun]; } format({path: "a", verbose: true}); format({path: "b", verbose: true, dryRun: false});
    |                                 ^^^^^^ Parameter \`dryRun\` always receives its default value.

`;

exports[`no-unnecessary-parameters > invalid(62): function format({value: renamed}) { return renamed; } format({value: 1}); format({value: 1}); 1`] = `

  1 | function format({value: renamed}) { return renamed; } format({value: 1}); format({value: 1});

`;

exports[`no-unnecessary-parameters > invalid(62): function format({value: renamed}) { return renamed; } format({value: 1}); format({value: 1}); 2`] = `

Message:
> 1 | function format({value: renamed}) { return renamed; } format({value: 1}); format({value: 1});
    |                         ^^^^^^^ Parameter \`renamed\` receives the same value at every call.

Output:
  1 | function format({ }) { return 1; } format({ }); format({ });

`;

exports[`no-unnecessary-parameters > invalid(63): const value = 1; function format({value}) { return value; } format({value}); format({value}); 1`] = `

  1 | const value = 1; function format({value}) { return value; } format({value}); format({value});

`;

exports[`no-unnecessary-parameters > invalid(63): const value = 1; function format({value}) { return value; } format({value}); format({value}); 2`] = `

Message:
> 1 | const value = 1; function format({value}) { return value; } format({value}); format({value});
    |                                   ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | const value = 1; function format({}) { return value; } format({}); format({});

`;

exports[`no-unnecessary-parameters > invalid(64): function format({value = 1}) { return value; } format({}); format({value: undefined}); 1`] = `

  1 | function format({value = 1}) { return value; } format({}); format({value: undefined});

`;

exports[`no-unnecessary-parameters > invalid(64): function format({value = 1}) { return value; } format({}); format({value: undefined}); 2`] = `

Message:
> 1 | function format({value = 1}) { return value; } format({}); format({value: undefined});
    |                  ^^^^^ Parameter \`value\` always receives its default value.

Output:
  1 | function format({  }) { return 1; } format({}); format({ });

`;

exports[`no-unnecessary-parameters > invalid(65): function format({value = 1}) { return value; } format({}); format({value: 1}); 1`] = `

  1 | function format({value = 1}) { return value; } format({}); format({value: 1});

`;

exports[`no-unnecessary-parameters > invalid(65): function format({value = 1}) { return value; } format({}); format({value: 1}); 2`] = `

Message:
> 1 | function format({value = 1}) { return value; } format({}); format({value: 1});
    |                  ^^^^^ Parameter \`value\` always receives its default value.

Output:
  1 | function format({  }) { return 1; } format({}); format({ });

`;

exports[`no-unnecessary-parameters > invalid(66): function format({first, second = first}) { return [first, second]; } format({first: 1}); format({first: 2}); 1`] = `

  1 | function format({first, second = first}) { return [first, second]; } format({first: 1}); format({first: 2});

`;

exports[`no-unnecessary-parameters > invalid(66): function format({first, second = first}) { return [first, second]; } format({first: 1}); format({first: 2}); 2`] = `

Message:
> 1 | function format({first, second = first}) { return [first, second]; } format({first: 1}); format({first: 2});
    |                         ^^^^^^ Parameter \`second\` always receives its default value.

`;

exports[`no-unnecessary-parameters > invalid(67): function format({value}) { return value; } format({}); format({}); 1`] = `

  1 | function format({value}) { return value; } format({}); format({});

`;

exports[`no-unnecessary-parameters > invalid(67): function format({value}) { return value; } format({}); format({}); 2`] = `

Message:
> 1 | function format({value}) { return value; } format({}); format({});
    |                  ^^^^^ Parameter \`value\` is always \`undefined\`.

Output:
  1 | function format({}) { return (void 0); } format({}); format({});

`;

exports[`no-unnecessary-parameters > invalid(68): function format({value, ...rest}) { return [value, rest]; } format({value: 1, other: 2}); format({value: 1, other: 3}); 1`] = `

  1 | function format({value, ...rest}) { return [value, rest]; } format({value: 1, other: 2}); format({value: 1, other: 3});

`;

exports[`no-unnecessary-parameters > invalid(68): function format({value, ...rest}) { return [value, rest]; } format({value: 1, other: 2}); format({value: 1, other: 3}); 2`] = `

Message:
> 1 | function format({value, ...rest}) { return [value, rest]; } format({value: 1, other: 2}); format({value: 1, other: 3});
    |                  ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format({ ...rest}) { return [1, rest]; } format({  other: 2}); format({  other: 3});

`;

exports[`no-unnecessary-parameters > invalid(69): function format({value = 1} = {}) { return value; } format(); format({}); 1`] = `

  1 | function format({value = 1} = {}) { return value; } format(); format({});

`;

exports[`no-unnecessary-parameters > invalid(69): function format({value = 1} = {}) { return value; } format(); format({}); 2`] = `

Message:
> 1 | function format({value = 1} = {}) { return value; } format(); format({});
    |                  ^^^^^ Parameter \`value\` always receives its default value.

Output:
  1 | function format({  } = {}) { return 1; } format(); format({});

`;

exports[`no-unnecessary-parameters > invalid(7): class Point { constructor(public x: number, value: number) { this.value = value; } } new Point(1, 0); new Point(2, 0); 1`] = `

  1 | class Point { constructor(public x: number, value: number) { this.value = value; } } new Point(1, 0); new Point(2, 0);

`;

exports[`no-unnecessary-parameters > invalid(7): class Point { constructor(public x: number, value: number) { this.value = value; } } new Point(1, 0); new Point(2, 0); 2`] = `

Message:
> 1 | class Point { constructor(public x: number, value: number) { this.value = value; } } new Point(1, 0); new Point(2, 0);
    |                                             ^^^^^^^^^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(7): function format(first, unit, last) { return first + unit + last; } format(1, \"px\", 2); format(3, \"px\", 4); 1`] = `

  1 | function format(first, unit, last) { return first + unit + last; } format(1, "px", 2); format(3, "px", 4);

`;

exports[`no-unnecessary-parameters > invalid(7): function format(first, unit, last) { return first + unit + last; } format(1, \"px\", 2); format(3, \"px\", 4); 2`] = `

Message:
> 1 | function format(first, unit, last) { return first + unit + last; } format(1, "px", 2); format(3, "px", 4);
    |                        ^^^^ Parameter \`unit\` receives the same value at every call.

Output:
  1 | function format(first, last) { return first + "px" + last; } format(1, 2); format(3, 4);

`;

exports[`no-unnecessary-parameters > invalid(70): function format({\"unit\": unit}) { return unit; } format({unit: \"px\"}); format({\"unit\": \"px\"}); 1`] = `

  1 | function format({"unit": unit}) { return unit; } format({unit: "px"}); format({"unit": "px"});

`;

exports[`no-unnecessary-parameters > invalid(70): function format({\"unit\": unit}) { return unit; } format({unit: \"px\"}); format({\"unit\": \"px\"}); 2`] = `

Message:
> 1 | function format({"unit": unit}) { return unit; } format({unit: "px"}); format({"unit": "px"});
    |                          ^^^^ Parameter \`unit\` receives the same value at every call.

Output:
  1 | function format({ }) { return "px"; } format({ }); format({ });

`;

exports[`no-unnecessary-parameters > invalid(71): function format({[\"unit\"]: unit}) { return unit; } format({[\"unit\"]: \"px\"}); format({unit: \"px\"}); 1`] = `

  1 | function format({["unit"]: unit}) { return unit; } format({["unit"]: "px"}); format({unit: "px"});

`;

exports[`no-unnecessary-parameters > invalid(71): function format({[\"unit\"]: unit}) { return unit; } format({[\"unit\"]: \"px\"}); format({unit: \"px\"}); 2`] = `

Message:
> 1 | function format({["unit"]: unit}) { return unit; } format({["unit"]: "px"}); format({unit: "px"});
    |                            ^^^^ Parameter \`unit\` receives the same value at every call.

Output:
  1 | function format({ }) { return "px"; } format({ }); format({ });

`;

exports[`no-unnecessary-parameters > invalid(72): function format({[1]: value}) { return value; } format({[1]: 2}); format({\"1\": 2}); 1`] = `

  1 | function format({[1]: value}) { return value; } format({[1]: 2}); format({"1": 2});

`;

exports[`no-unnecessary-parameters > invalid(72): function format({[1]: value}) { return value; } format({[1]: 2}); format({\"1\": 2}); 2`] = `

Message:
> 1 | function format({[1]: value}) { return value; } format({[1]: 2}); format({"1": 2});
    |                       ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format({ }) { return 2; } format({ }); format({ });

`;

exports[`no-unnecessary-parameters > invalid(73): function format(__proto__) { return {value: __proto__}; } format(1); format(1); 1`] = `

  1 | function format(__proto__) { return {value: __proto__}; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(73): function format(__proto__) { return {value: __proto__}; } format(1); format(1); 2`] = `

Message:
> 1 | function format(__proto__) { return {value: __proto__}; } format(1); format(1);
    |                 ^^^^^^^^^ Parameter \`__proto__\` receives the same value at every call.

Output:
  1 | function format() { return {value: 1}; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(74): function format(value, other) { return value + other; } format(1, ...items); format(1, 2); 1`] = `

  1 | function format(value, other) { return value + other; } format(1, ...items); format(1, 2);

`;

exports[`no-unnecessary-parameters > invalid(74): function format(value, other) { return value + other; } format(1, ...items); format(1, 2); 2`] = `

Message:
> 1 | function format(value, other) { return value + other; } format(1, ...items); format(1, 2);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format(other) { return 1 + other; } format(...items); format(2);

`;

exports[`no-unnecessary-parameters > invalid(75): function format(value /* keep */) { return value; } format(1); format(1); 1`] = `

  1 | function format(value /* keep */) { return value; } format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(75): function format(value /* keep */) { return value; } format(1); format(1); 2`] = `

Message:
> 1 | function format(value /* keep */) { return value; } format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(76): function format(value) { return value; } format(/* keep */ 1); format(1); 1`] = `

  1 | function format(value) { return value; } format(/* keep */ 1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(76): function format(value) { return value; } format(/* keep */ 1); format(1); 2`] = `

Message:
> 1 | function format(value) { return value; } format(/* keep */ 1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(77): function format({value /* keep */}) { return value; } format({value: 1}); format({value: 1}); 1`] = `

  1 | function format({value /* keep */}) { return value; } format({value: 1}); format({value: 1});

`;

exports[`no-unnecessary-parameters > invalid(77): function format({value /* keep */}) { return value; } format({value: 1}); format({value: 1}); 2`] = `

Message:
> 1 | function format({value /* keep */}) { return value; } format({value: 1}); format({value: 1});
    |                  ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(78): function format({value}) { return value; } format({value: /* keep */ 1}); format({value: 1}); 1`] = `

  1 | function format({value}) { return value; } format({value: /* keep */ 1}); format({value: 1});

`;

exports[`no-unnecessary-parameters > invalid(78): function format({value}) { return value; } format({value: /* keep */ 1}); format({value: 1}); 2`] = `

Message:
> 1 | function format({value}) { return value; } format({value: /* keep */ 1}); format({value: 1});
    |                  ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(79): function format(value) { const limit = 2; return value; } const limit = 1; format(limit); format(limit); 1`] = `

  1 | function format(value) { const limit = 2; return value; } const limit = 1; format(limit); format(limit);

`;

exports[`no-unnecessary-parameters > invalid(79): function format(value) { const limit = 2; return value; } const limit = 1; format(limit); format(limit); 2`] = `

Message:
> 1 | function format(value) { const limit = 2; return value; } const limit = 1; format(limit); format(limit);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(8): class Formatter { #format(value: number, unit: string) { return value + unit; } run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 1`] = `

  1 | class Formatter { #format(value: number, unit: string) { return value + unit; } run() { this.#format(1, "px"); this.#format(2, "px"); } }

`;

exports[`no-unnecessary-parameters > invalid(8): class Formatter { #format(value: number, unit: string) { return value + unit; } run() { this.#format(1, \"px\"); this.#format(2, \"px\"); } } 2`] = `

Message:
> 1 | class Formatter { #format(value: number, unit: string) { return value + unit; } run() { this.#format(1, "px"); this.#format(2, "px"); } }
    |                                          ^^^^^^^^^^^^ Parameter \`unit\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(8): function format(value) { return value; } format(\"text\"); format('text'); 1`] = `

  1 | function format(value) { return value; } format("text"); format('text');

`;

exports[`no-unnecessary-parameters > invalid(8): function format(value) { return value; } format(\"text\"); format('text'); 2`] = `

Message:
> 1 | function format(value) { return value; } format("text"); format('text');
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return "text"; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(80): function format(value) { return value; } format(limit); format(limit); const limit = 1; 1`] = `

  1 | function format(value) { return value; } format(limit); format(limit); const limit = 1;

`;

exports[`no-unnecessary-parameters > invalid(80): function format(value) { return value; } format(limit); format(limit); const limit = 1; 2`] = `

Message:
> 1 | function format(value) { return value; } format(limit); format(limit); const limit = 1;
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(81): function format(value) { return value; } format(1); 1`] = `

Options:
- minimumCallCount: 1

Code:
  1 | function format(value) { return value; } format(1);

`;

exports[`no-unnecessary-parameters > invalid(81): function format(value) { return value; } format(1); 2`] = `

Message:
> 1 | function format(value) { return value; } format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 1; } format();

`;

exports[`no-unnecessary-parameters > invalid(82): function format(value) { return value; } format(1); format(1); format(1); 1`] = `

Options:
- minimumCallCount: 3

Code:
  1 | function format(value) { return value; } format(1); format(1); format(1);

`;

exports[`no-unnecessary-parameters > invalid(82): function format(value) { return value; } format(1); format(1); format(1); 2`] = `

Message:
> 1 | function format(value) { return value; } format(1); format(1); format(1);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 1; } format(); format(); format();

`;

exports[`no-unnecessary-parameters > invalid(83): function outer() { function format(value) { return value; } format(1); format(1); } 1`] = `

  1 | function outer() { function format(value) { return value; } format(1); format(1); }

`;

exports[`no-unnecessary-parameters > invalid(83): function outer() { function format(value) { return value; } format(1); format(1); } 2`] = `

Message:
> 1 | function outer() { function format(value) { return value; } format(1); format(1); }
    |                                    ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function outer() { function format() { return 1; } format(); format(); }

`;

exports[`no-unnecessary-parameters > invalid(84): function outer(limit) { \"use strict\"; function format(value) { return () => value; } format(limit); format(limit); } outer(1); 1`] = `

  1 | function outer(limit) { "use strict"; function format(value) { return () => value; } format(limit); format(limit); } outer(1);

`;

exports[`no-unnecessary-parameters > invalid(84): function outer(limit) { \"use strict\"; function format(value) { return () => value; } format(limit); format(limit); } outer(1); 2`] = `

Message:
> 1 | function outer(limit) { "use strict"; function format(value) { return () => value; } format(limit); format(limit); } outer(1);
    |                                                       ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(85): function outer() { function format(value) { return delete value; } format(1); format(1); } outer(); 1`] = `

  1 | function outer() { function format(value) { return delete value; } format(1); format(1); } outer();

`;

exports[`no-unnecessary-parameters > invalid(85): function outer() { function format(value) { return delete value; } format(1); format(1); } outer(); 2`] = `

Message:
> 1 | function outer() { function format(value) { return delete value; } format(1); format(1); } outer();
    |                                    ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(86): function format(first, second = first) {\n\t'use custom directive';\n\treturn first + second;\n}\nformat(1);\nformat(2); 1`] = `

  1 | function format(first, second = first) {
  2 | 	'use custom directive';
  3 | 	return first + second;
  4 | }
  5 | format(1);
  6 | format(2);

`;

exports[`no-unnecessary-parameters > invalid(86): function format(first, second = first) {\n\t'use custom directive';\n\treturn first + second;\n}\nformat(1);\nformat(2); 2`] = `

Message:
> 1 | function format(first, second = first) {
    |                        ^^^^^^ Parameter \`second\` always receives its default value.
  2 | 	'use custom directive';
  3 | 	return first + second;
  4 | }
  5 | format(1);
  6 | format(2);

Output:
  1 | function format(first) {
  2 | 	'use custom directive';
  3 | 	const second = first;
  4 | 	return first + second;
  5 | }
  6 | format(1);
  7 | format(2);

`;

exports[`no-unnecessary-parameters > invalid(87): function format(first, second = first) {\r\n    return first + second;\r\n}\r\nformat(1);\r\nformat(2); 1`] = `

  1 | function format(first, second = first) {
  2 |     return first + second;
  3 | }
  4 | format(1);
  5 | format(2);

`;

exports[`no-unnecessary-parameters > invalid(87): function format(first, second = first) {\r\n    return first + second;\r\n}\r\nformat(1);\r\nformat(2); 2`] = `

Message:
> 1 | function format(first, second = first) {
    |                        ^^^^^^ Parameter \`second\` always receives its default value.
  2 |     return first + second;
  3 | }
  4 | format(1);
  5 | format(2);

Output:
  1 | function format(first) {
  2 |     const second = first;
  3 |     return first + second;
  4 | }
  5 | format(1);
  6 | format(2);

`;

exports[`no-unnecessary-parameters > invalid(88): function make(value) { return new Foo(value); } make(1); make(1); 1`] = `

  1 | function make(value) { return new Foo(value); } make(1); make(1);

`;

exports[`no-unnecessary-parameters > invalid(88): function make(value) { return new Foo(value); } make(1); make(1); 2`] = `

Message:
> 1 | function make(value) { return new Foo(value); } make(1); make(1);
    |               ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function make() { return new Foo(1); } make(); make();

`;

exports[`no-unnecessary-parameters > invalid(89): function outer() { let limit; function format(value) { return value; } format(limit); format(limit); } 1`] = `

  1 | function outer() { let limit; function format(value) { return value; } format(limit); format(limit); }

`;

exports[`no-unnecessary-parameters > invalid(89): function outer() { let limit; function format(value) { return value; } format(limit); format(limit); } 2`] = `

Message:
> 1 | function outer() { let limit; function format(value) { return value; } format(limit); format(limit); }
    |                                               ^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(9): class Point { constructor(value: number) { this.value = value; } } let point: Point; new Point(1); new Point(1); 1`] = `

  1 | class Point { constructor(value: number) { this.value = value; } } let point: Point; new Point(1); new Point(1);

`;

exports[`no-unnecessary-parameters > invalid(9): class Point { constructor(value: number) { this.value = value; } } let point: Point; new Point(1); new Point(1); 2`] = `

Message:
> 1 | class Point { constructor(value: number) { this.value = value; } } let point: Point; new Point(1); new Point(1);
    |                           ^^^^^^^^^^^^^ Parameter \`value\` receives the same value at every call.

`;

exports[`no-unnecessary-parameters > invalid(9): function format(value) { return value; } format(16); format(0x10); 1`] = `

  1 | function format(value) { return value; } format(16); format(0x10);

`;

exports[`no-unnecessary-parameters > invalid(9): function format(value) { return value; } format(16); format(0x10); 2`] = `

Message:
> 1 | function format(value) { return value; } format(16); format(0x10);
    |                 ^^^^^ Parameter \`value\` receives the same value at every call.

Output:
  1 | function format() { return 16; } format(); format();

`;

exports[`no-unnecessary-parameters > invalid(90): function format(first, second = first) { \"use custom directive\"; } format(1); format(2); 1`] = `

  1 | function format(first, second = first) { "use custom directive"; } format(1); format(2);

`;

exports[`no-unnecessary-parameters > invalid(90): function format(first, second = first) { \"use custom directive\"; } format(1); format(2); 2`] = `

Message:
> 1 | function format(first, second = first) { "use custom directive"; } format(1); format(2);
    |                        ^^^^^^ Parameter \`second\` always receives its default value.

Output:
  1 | function format(first) { "use custom directive";
  2 | 	const second = first;
  3 |  } format(1); format(2);

`;
